Se agrega detalle de fuentes.

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 			<h4>FUENTES PREDEFINIDAS</h4>
 			<hr>
 			<p>Contamos con una pequeña base de datos nativa con fuentes para cubrir necesidades básicas.</p>
+			<p>Una <span class="font-Lato">Sans (Lato)</span>, una <span class="font-Didot">Serif (Didot)</span>, y una <span class="font-Courier">Monospace (Courier)</span>.</p>
 		</div>	
 		<br>	
 		<div class = "col-third text-c bg-white padded shadowed">
